--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,8 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.5.0"
   }
 }
