--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-formidable": "^1.2.3",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.3",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
@@ -41,12 +43,14 @@
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-formidable": "^1.2.0",
     "express-validator": "^7.0.1",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mime": "^4.0.1",
     "mongodb": "^6.5.0",
+    "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.3"
   }
 }
